Projects General Change
I have added a SEARCH button to the EXPLORE PROEJCTS page. Also a link
for exploring more results. And took away the tree nodes hyper link.
I have also changed a couple of page titles.

--- a/ProjectShode/Styles/Site.css
+++ b/ProjectShode/Styles/Site.css
@@ -379,6 +379,16 @@ h3
     margin-left: 35px;
 }
 
+#resultsLabel
+{
+    float:left;
+}
+
+#moreResultsLink
+{
+    float:right;
+}
+
 #projectProfileStatistics
 {
     margin-bottom: 10px;
