--- a/ProjectShode/Profile.master
+++ b/ProjectShode/Profile.master
@@ -8,12 +8,13 @@
 <asp:Content ID="MainContent" ContentPlaceHolderID="MainContent" runat="server">
     <section id="location">
         <asp:HyperLink runat="server" NavigateUrl="~/Default.aspx">Shode</asp:HyperLink> > 
-        <asp:HyperLink runat="server" NavigateUrl="~/Profile.aspx">Profile</asp:HyperLink>
+        <asp:HyperLink runat="server" NavigateUrl="~/Profiles.aspx">Profile</asp:HyperLink>
     </section>
 
     <section id="menuSection">
        <asp:Menu ID="MenuProfile" runat="server" Orientation="vertical">
              <Items>
+                 <asp:MenuItem Text="Get More Credits!!!" Value="Credits" ImageUrl="~/Images/i.png" NavigateUrl="ProfileCredits.aspx"></asp:MenuItem>
                  <asp:MenuItem Text="Resume" Value="Resume" ImageUrl="~/Images/i.png" NavigateUrl="ProfileMy.aspx"></asp:MenuItem>
                  <asp:MenuItem Text="My Contributions" Value="Contributions" ImageUrl="~/Images/i.png" NavigateUrl="ProfileContributions.aspx"></asp:MenuItem>
                  <asp:MenuItem Text="My Developments" Value="Developments" ImageUrl="~/Images/i.png" NavigateUrl="ProfileDevelopments.aspx"></asp:MenuItem>
