--- a/ProjectShode/Styles/Site.css
+++ b/ProjectShode/Styles/Site.css
@@ -437,7 +437,7 @@ h3
     font: "Segoe UI";
 }
 
-.ButtonLogSign
+.ButtonShode
 {
     background-color: #24242C;
     border-style:solid;
@@ -446,6 +446,11 @@ h3
     height: 30px;
     color: #FFFFFF;
      
+}
+
+.ButtonShode:hover
+{
+    opacity: 0.7;
 }
 
 .LogOutbutton
