Added AJAX to the Project
Use of Ajax in order to calculate the strength of the password when a
user sign up.

--- a/ProjectShode/Styles/Site.css
+++ b/ProjectShode/Styles/Site.css
@@ -471,3 +471,32 @@ h3
     cursor:pointer;
     color: #FFFFFF;
 }
+
+.colorPass1
+{
+    color:#FFFFFF;
+    background-color:#24242C;
+}
+.colorPass2
+{
+    color:#FFFFFF;
+    background-color:#24242C;
+}
+.colorPass3
+{
+    color:#FFFFFF;
+    background-color:#24242C;
+}
+.colorPass4
+{
+    color:#FFFFFF;
+    background-color:#24242C;
+}
+.colorPass5
+{
+    color:#FFFFFF;
+    background-color:#24242C;
+}
+
+
+
