--- a/ProjectShode/Site.Master
+++ b/ProjectShode/Site.Master
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head runat="server">
+<head id="Head1" runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
     <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
@@ -10,14 +10,21 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <form runat="server">
+    <form id="Form1" runat="server">
 
      <header id="global_header">
         <section class="header_obj">
             <asp:HyperLink ID="UserLink" runat="server" NavigateUrl="~/Profiles.aspx"></asp:HyperLink>
+
+            <asp:HyperLink ID="OpenCorchete" runat="server" Text="["> </asp:HyperLink>
+            <asp:HyperLink ID="LoginLink" runat="server" NavigateUrl="~/Login.aspx" Text="Log In"></asp:HyperLink>
+
+            <asp:HyperLink ID="Separator" runat="server" Text=" | "> </asp:HyperLink>
+
+            <asp:HyperLink ID="SignupLink" runat="server" NavigateUrl="~/Signup.aspx" Text="Sign Up"></asp:HyperLink>
+            <asp:HyperLink ID="CloseCorchete" runat="server" Text="]"> </asp:HyperLink>
+
             <asp:Button ID="LogOutLink" runat="server" onclick="logOut" CssClass="LogOutbutton"></asp:Button>
-            <asp:HyperLink ID="LoginLink" runat="server" NavigateUrl="~/Login.aspx" Text="[Log In |"></asp:HyperLink>
-            <asp:HyperLink ID="SignupLink" runat="server" NavigateUrl="~/Signup.aspx" Text=" Sign Up]"></asp:HyperLink>
         </section>
         <section class="header_obj">
             <asp:Label ID="LogInMotivator" runat="server" Text="Log In or Sign Up to enjoy our comunity"></asp:Label>
@@ -47,6 +54,9 @@
             </section>
             <section id="menu">
                 <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal">
+                    <LevelMenuItemStyles>
+                        <asp:MenuItemStyle CssClass="menu"/>
+                    </LevelMenuItemStyles>
                     <Items>
                         <asp:MenuItem Text="What is Shode?" Value="About" ImageUrl="~/Images/questionmark.png" NavigateUrl="About.aspx"></asp:MenuItem>
                         <asp:MenuItem Text="Projects" Value="About" ImageUrl="~/Images/search.png" NavigateUrl="Projects.aspx"></asp:MenuItem>
@@ -68,3 +78,4 @@
     </form>
 </body>
 </html>
+
