--- a/ProjectShode/Profile.master
+++ b/ProjectShode/Profile.master
@@ -19,7 +19,8 @@
                  <asp:MenuItem Text="My Contributions" Value="Contributions" ImageUrl="~/Images/i.png" NavigateUrl="ProfileContributions.aspx"></asp:MenuItem>
                  <asp:MenuItem Text="My Developments" Value="Developments" ImageUrl="~/Images/i.png" NavigateUrl="ProfileDevelopments.aspx"></asp:MenuItem>
                  <asp:MenuItem Text="My Favourites" Value="Interests" ImageUrl="~/Images/i.png" NavigateUrl="ProfileFavourites.aspx"></asp:MenuItem>
-                 <asp:MenuItem Text="Inbox" Value="Inbox" ImageUrl="~/Images/i.png" NavigateUrl="ProfileMessages.aspx"></asp:MenuItem>
+                 <asp:MenuItem Text="Inbox" Value="Inbox" ImageUrl="~/Images/i.png" NavigateUrl="ProfileMessages.aspx?Box=In"></asp:MenuItem>
+                 <asp:MenuItem Text="Outbox" Value="Outbox" ImageUrl="~/Images/i.png" NavigateUrl="ProfileMessages.aspx?Box=Out"></asp:MenuItem>
                  <asp:MenuItem Text="New Private Message" Value="Inbox" ImageUrl="~/Images/i.png" NavigateUrl="ProfileCompose.aspx"></asp:MenuItem>
              </Items>
        </asp:Menu>
